--- a/05_resolve-simple.Rmd
+++ b/05_resolve-simple.Rmd
@@ -1,9 +1,97 @@
 ---
-title: ''
+title: 'Zpracování projektů s obcí/ZÚJ realizace'
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(arrow)
+```
+
+
+```{r data}
+dt <- read_parquet(here::here("data-processed", 
+                              "misto_fix-02-gnames.parquet"))
+dtl <- read_parquet(here::here("data-processed", 
+                               "misto_fix-02-gnames_long-geo.parquet"))
+
+prj_meta <- read_parquet(here::here("data-processed", "prj-esif-meta.parquet"))
+dt_geostructure_byprj <- read_parquet(here::here("data-processed", "dt_geostructure_by-prj.parquet"))
+dt_geostructure_bylvl <- read_parquet(here::here("data-processed", "dt_geostructure_by-lvl.parquet"))
+```
+
+
+```{r geostatus}
+dt_geostatus <- read_parquet(here::here("data-processed", "projects-geo-check-groups.parquet"))
+prj_id_nonhier <- dt_geostatus %>% filter(geostatus == "více míst nehierarchicky") %>% 
+  pull(prj_id)
+```
+
+```{r metadata}
+source(here::here("read_metadata.R"))
+```
+
+```{r data-basics}
+dts <- dt %>% 
+  select(op_id, starts_with("prj_"), starts_with("p_"), -prj_radek) %>% 
+  distinct()
+```
+
+```{r data-orgs}
+orgs <- read_parquet(here::here("data-processed", "orgs_sp.parquet"))
+```
+
+```{r data-subset-ids}
+prj_no_obec <- read_parquet(here::here("data-processed", "prj_id_noobec.parquet"))
+```
+
+```{r}
+table(dt_geostatus$geostatus)
+```
+
+
+```{r}
+dtl_smpl <- dtl %>% 
+  # left_join(dt_geostructure_bylvl) %>%
+  filter(typ == "id") %>% 
+  filter(level < "orp") %>% 
+  left_join(dt_geostatus) %>%
+  # count(geostatus)
+  filter(!geostatus %in% c("více míst nehierarchicky")) %>% 
+  # count(geostatus)
+  filter(!(geostatus == "obec a ZUJ se kryjí" & level == "zuj")) %>% 
+  select(prj_id, op_id, value, level, rozpad_typ = geostatus) %>% 
+  mutate(obec_puvod = "obec-ZUJ u projektů, kde byly zadány",
+         rozpad_typ = as.character(rozpad_typ),
+         rozpad_duvod = NA_character_,
+         nazev_orig = NA_character_,
+         level_orig = NA_character_) %>% 
+  group_by(obec_puvod, rozpad_typ, op_id) %>% 
+  select(prj_id, op_id, level, level_orig, rozpad_typ, 
+         rozpad_duvod, obec_puvod)
+```
+
+```{r}
+length(unique(dtl_smpl$prj_id))
+```
+
+```{r}
+dtl_smpl %>% 
+  distinct(prj_id, rozpad_typ) %>% 
+  count(rozpad_typ)
+```
+
+
+```{r}
+dtl_smpl %>%
+  left_join(dt_geostructure_bylvl) %>% 
+  ungroup() %>% 
+  skimr::skim() 
+```
+
+```{r}
+dir.create(here::here("data-processed", "dtl_resolved_smpl"))
+write_parquet(dtl_smpl, here::here("data-processed", "dtl_resolved_smpl/all.parquet"))
 ```
 
