--- a/10_compile-export.Rmd
+++ b/10_compile-export.Rmd
@@ -51,7 +51,7 @@ pq.write_to_dataset(dtcc, "data-output/dtl-all-py",
 
 ```
 
-```{r, eval=F}
+```{r, eval=T}
 dss <- open_dataset(here::here("data-output", "dtl-all-py"))
 ```
 
